force-app/main/default/objects/Map_Product__c/Map_Product__c.object-meta.xml
<CustomObject>
    <label>Map Product</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Map Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Map Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>