force-app/main/default/objects/Map_Product__c/fields/Custom_Product__c.field-meta.xml
<CustomField>
    <fullName>Custom_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom product</label>
    <referenceTo>incomlend_product__c</referenceTo>
    <relationshipLabel>Map Products</relationshipLabel>
    <relationshipName>Map_Products</relationshipName>
    <type>Lookup</type>
</CustomField>