force-app/main/default/objects/Map_Product__c/fields/Supplier_Buyer_map__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Buyer_map__c</fullName>
    <label>Supplier Buyer Map</label>
    <referenceTo>Supplier_Buyer_Map__c</referenceTo>
    <relationshipLabel>Map Products</relationshipLabel>
    <relationshipName>Map_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>